# election

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml
docs/: Changelog.md  Resources.md
src/: core.py
