# When deploying to new project:
# 1. Ctrl+F replace "PyTemplate" with module name
# 2. Update description
# 3. Add any necessary dependencies / dev-dependencies as you install them
# 4. Verify version of python matches installed  python. Currently set to Python 3.9

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'PythonTemplate'
version = '2024.1' # Versions are [Year].[Release of Year]
description = 'Python template file for faster setup and builds'
requires-python = '>=3.7'
license = {file = "LICENSE.txt"}
keywords = ['Python']
authors = [{email = 'kylekaptbone@yahoo.com'},{name = 'Kyle Patterson'}]
classifiers = ['Programming Language :: Python']
dynamic = ['readme']
dependencies = ['ruff']

[tool.setuptools.dynamic]
readme = {file = ['README.md']}

[project.optional-dependencies]
dev = [
'pytest>=8.2.2',
'pyupgrade>=3.16.0',
'pre-commit>=3.7.1',
]

[project.urls]
homepage = 'https://github.com/kylekap/PythonTemplate'
documentation = 'https://github.com/kylekap/PythonTemplate/tree/main/docs'
repository = 'https://github.com/kylekap/PythonTemplate'
changelog = 'https://github.com/kylekap/PythonTemplate/tree/main/Docs/Changelog.md'


[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double" # Like Black, use double quotes for strings.
indent-style = "space" # Like Black, indent with spaces, rather than tabs.

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",  # flake8-annotations
    "E501", # Avoid enforcing line-length violations (`E501`)
    "D100", # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "T201", # I'm gunna print sometimes, you gotta live with it
    "ARG002", # Sometimes, you want functions to match
    ]
